<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/lblResetSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/esqueceusenha"
        android:textColor="@android:color/black"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editCadastroNome"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editResetEmail"
        android:layout_width="match_parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="18dp"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:hint="@string/email"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        app:layout_constraintBottom_toTopOf="@id/editCadastroEmail"
        android:layout_marginBottom="18dp"
        android:layout_height="50dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnResetSenha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/enviarEmail"
        android:layout_marginStart="18dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="25dp"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_button"
        android:textAllCaps="false" />

</LinearLayout>